# drum-weaver

./: .gitignore  .rustfmt.toml  Cargo.toml  LICENSE  README.md
.github/workflows/: build-linux.yml  build-windows.yml  build.yml  check.yml
assets/: playlists.json
rust-edrum-waver/: Cargo.toml  logging_config.yml
rust-edrum-waver/.github/workflows/: build.yml
rust-edrum-waver/assets/: song_list.csv
rust-edrum-waver/src/: audio.rs  common.rs  lib.rs  main.rs  player.rs  playlist.rs  songlist.rs  ui.rs
rust-edrum-waver/src/app/: app.rs  library.rs  mod.rs  player.rs  playlist.rs
rust-edrum-waver/src/app/components/: footer.rs  menu_bar.rs  mod.rs  player_component.rs  song_list.rs
rust-edrum-waver/src/audio/: mod.rs
rust-edrum-waver/src/device/: mod.rs
rust-edrum-waver/src/songlist/: mod.rs
rust-edrum-waver/src/ui/: commands.rs  handler.rs  mod.rs
src/: common.rs  main.rs
src/app/: app.rs  audio.rs  beep.rs  commands.rs  devices.rs  events.rs  library.rs  mod.rs  player.rs  render.rs  setup.rs  status_bar.rs
src/device/: mod.rs
src/playlist/: mod.rs
src/songlist/: mod.rs
src/ui/: commands.rs  mod.rs  render.rs
