[package]
name = "drum_weaver"
version = "2.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.24", features = ["serde"] }
clap = { version = "4.2.7", features = ["derive"] }
color-eyre = "0.6.2"
confy = "0.5.1"
cpal = "0.15.2"
crossbeam-channel = "0.5.8"
crossterm = { version = "0.26.1", features = ["serde"] }
csv = "1.2.1"
ctrlc = "3.4.0"
dialog = "0.3.0"
lazy_static = "1.4.0"
log = "0.4.17"
log4rs = "1.2.0"
native-dialog = "0.6.3"
pretty_env_logger = "0.5.0"
rand = "0.8.5"
ratatui = { version = "0.21.0", features = ["serde"] }
rayon = "1.7.0"
rodio = { version = "0.17.1", default_features = false, features = ["wav"] }
rubato = "0.12.0"
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
sevenz-rust = "0.4.2"
symphonia = { version = "0.5.2", default-features = false, features = [
    "wav",
    "pcm",
] }
termimad = "0.23.0"
thiserror = "1.0.40"

[dev-dependencies]
simplelog = "0.12"

#[profile.release]
#debug = 1
#opt-level = 0

#[rust]
#debuginfo-level = 1
