[package]
name = "rust-edrum-waver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4.3.0"
confy = "0.5.1"
csv = "1.2.1"
eframe = "0.21.3"
rfd = "0.11.4"
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"

[patch.crates-io]
confy = { git = 'https://github.com/rust-cli/confy' }
