[package]
name = "rust-edrum-waver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4.3.0"
color-eyre = "0.6.2"
confy = "0.5.1"
cpal = "0.15.2"
csv = "1.2.1"
eframe = "0.21.3"
log = "0.4.17"
rfd = "0.11.4"
ringbuf = "0.3.3"
rubato = "0.12.0"
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
sevenz-rust = "0.2.11"
symphonia = "0.5.2"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"

[patch.crates-io]
confy = { git = 'https://github.com/rust-cli/confy' }

[profile.release]
debug = false

