[package]
name = "rust-edrum-waver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.24", features = ["serde"] }
clap = { version = "4.2.7", features = ["derive"] }
color-eyre = "0.6.2"
cpal = "0.15.2"
crossterm = { version = "0.26.1", features = ["serde"] }
csv = "1.2.1"
dialog = "0.3.0"
lazy_static = "1.4.0"
log = "0.4.17"
log4rs = "1.2.0"
native-dialog = "0.6.3"
pretty_env_logger = "0.4.0"
pulldown-cmark = "0.9.3"
ratatui = { version = "0.21.0", features = ["serde"] }
rodio = "0.17.1"
rubato = "0.12.0"
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
sevenz-rust = "0.2.10"
symphonia = "0.5.2"
termimad = "0.23.0"
thiserror = "1.0.40"

[dev-dependencies]
simplelog = "0.12"
